[package]
name = "jmpscare"
version = "0.1.0"
authors = ["Lukas Seidel"]
documentation = ""
edition = "2018"
include = [
    "/.gitmodules",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pr0me/JMPscare"
description = "Rust program for analyzing taken jumps over multiple execution traces"

[dependencies]
capstone="0.7.0"
clap = "2.33.2"

[profile.release]
lto = true
opt-level = 3