[package]
name = "jmpscare"
version = "0.1.0"
authors = ["Lukas Seidel"]
documentation = ""
edition = "2021"
include = [
    "/.gitmodules",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pr0me/JMPscare"
description = "Rust program for analyzing taken jumps over multiple execution traces"

[dependencies]
capstone="0.12.0"
clap = "4.5.20"

[profile.release]
lto = true
opt-level = 3